<?xml version="1.0" encoding="utf-8"?>
<!--=================================================-->
<!--                                                 -->
<!-- Filename:    activity_main.xml                  -->
<!-- Author:      Daniel Walther                     -->
<!-- Brief:       Represents the layout of the       -->
<!--              of the Main Activity page          -->
<!--                                                 -->
<!--=================================================-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbarMain"
        layout="@layout/toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewAudioFiles"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxGlobalControls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonToggleHide" />

    <TextView
        android:id="@+id/textViewEmptyListIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textViewEmptyListIndicator_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMain" />

    <Button
        android:id="@+id/buttonToggleHide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="80dp"
        android:text="@string/buttonToggleHide_filesNotHidden"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMain" />

    <ImageButton
        android:id="@+id/buttonPlayPause"
        android:layout_width="59dp"
        android:layout_height="59dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/buttonPlayPause_contentDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_play"
        android:visibility="gone"/>

    <ImageButton
        android:id="@+id/buttonSeekForward"
        android:layout_width="59dp"
        android:layout_height="59dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/buttonSeekForward_contentDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonPlayPause"
        app:srcCompat="@drawable/ic_seekforward"
        android:visibility="gone"/>

    <ImageButton
        android:id="@+id/buttonSeekBackward"
        android:layout_width="59dp"
        android:layout_height="59dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/buttonSeekBackward_contentDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonPlayPause"
        app:srcCompat="@drawable/ic_seekbackward"
        android:visibility="gone"/>

    <SeekBar
        android:id="@+id/seekBarPosition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlayPause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxGlobalControls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/checkBoxGlobalControls_text"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/seekBarPosition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>