<?xml version="1.0" encoding="utf-8"?>
<!--================================================-->
<!--                                                -->
<!-- Filename:    audiofilelist_item.xml            -->
<!-- Author:      Daniel Walther                    -->
<!-- Brief:       Represents the layout of each     -->
<!--              item in the main RecyclerView     -->
<!--                                                -->
<!--================================================-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/radio_playFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/buttonPlayPause"
            android:layout_width="59dp"
            android:layout_height="59dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/buttonPlayPause_contentDesc"
            app:srcCompat="@drawable/ic_play" />

        <RadioButton
            android:id="@+id/radioSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_gravity="center" />

    </FrameLayout>

    <SeekBar
        android:id="@+id/seekBarPosition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewCurrentTime"
        app:layout_constraintStart_toEndOf="@+id/radio_playFrame" />

    <TextView
        android:id="@+id/textViewFilename"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/buttonDelete"
        app:layout_constraintStart_toEndOf="@+id/radio_playFrame"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewFileProperties"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarPosition"
        app:layout_constraintEnd_toStartOf="@+id/buttonDelete"
        app:layout_constraintStart_toEndOf="@+id/radio_playFrame"
        app:layout_constraintTop_toBottomOf="@+id/textViewFilename" />

    <TextView
        android:id="@+id/textViewTotalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewCurrentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewTotalTime" />

    <ImageButton
        android:id="@+id/buttonDelete"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewCurrentTime"
        app:layout_constraintEnd_toStartOf="@+id/dragHandle"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_delete"
        android:contentDescription="@string/buttonDelete_contentDescription" />

    <ImageButton
        android:id="@+id/dragHandle"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewCurrentTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_draghandle"
        android:contentDescription="@string/dragHandle_contentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>